fix buttons alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,6 @@
 }
 
 .ptro-icon-btn i {
-    padding-bottom: 1px;
 }
 
 
